overflow: scroll ---> overflow: hidden, fixes background positioning

--- a/craigscan/public/stylesheets/stylesheetdesktop.css
+++ b/craigscan/public/stylesheets/stylesheetdesktop.css
@@ -57,7 +57,7 @@ a {
     height: 100%;
     background-image: url('./tilt-shift-neighborhood-dark.jpg');
     background-repeat: no-repeat;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .solidbg {
